--- a/global_change_lab/templates/trainer_dashboard.html
+++ b/global_change_lab/templates/trainer_dashboard.html
@@ -181,3 +181,7 @@ $(document).ready(function() {
 </script>
 
 {% endblock %}
+
+{% block fat_footer %}
+{% include 'partials/fat_footer.html' %}
+{% endblock %}
