--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -65,3 +65,7 @@
 {% include 'skills/partials/skill_list_large.html' %}
 
 {% endblock %}
+
+{% block fat_footer %}
+{% include 'partials/fat_footer.html' %}
+{% endblock %}
