--- a/skills/templates/skills/trainingbits_overview.html
+++ b/skills/templates/skills/trainingbits_overview.html
@@ -57,3 +57,7 @@ behind the topics.</p>
   {% include 'partials/trainingbits_grid.html' %}
 
 {% endblock %}
+
+{% block fat_footer %}
+{% include 'partials/fat_footer.html' %}
+{% endblock %}
