--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -50,3 +50,7 @@
 <hr>
 {% include 'partials/trainingbits_grid.html' with trainingbits=skill.trainingbits.all get_query=skill_id_get_query %}
 {% endblock %}
+
+{% block fat_footer %}
+{% include 'partials/fat_footer.html' %}
+{% endblock %}
