--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -7,18 +7,26 @@
 <div id="login-modal" class="reveal-modal small" data-reveal>
   <div class="row">
     <div class="small-7 columns">
-      <h3>Sign in</h3>
-      <form action="{% url 'account_login' %}" method="POST">
+      <h3>Sign up</h3>
+      <form method="POST" action="{% url 'account_signup' %}">
         {% csrf_token %}
-        <input type="text" name="login" placeholder="username or email">
-        <input type="password" name="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;">
-        <button>Sign in</button>
+        <label><div>E-mail</div>         <input type="text" name="email" placeholder="example@example.org"></label>
+        <label><div>Name</div>           <input type="text" name="username"></label>
+        <label><div>Password</div>       <input type="password" name="password1"></label>
+        <label><div>Repeat password</div><input type="password" name="password2"></label>
+        <div>
+          <div class="small-2 checkbox-container"><input type="checkbox" id="terms-checkbox" name="terms"></div>
+          <div class="small-10 terms-text"><label for="terms-checkbox">
+            <span class="terms">I agree to the Terms of Service and Privacy Policy of The Global Change Lab</span></label>
+          </div>
+        </div>
+        <input type="hidden" name="next" value="{% url 'new_user' %}">
+        <button>Sign up</button>
       </form>
     </div>
     <div class="small-5 columns signup">
       <h3>Sign up via...</h3>
       <ul>
-        <li><a class="secondary button" href="#" data-reveal-id="signup-modal">Email</a></li>
         <li><a class="secondary button" href="{% provider_login_url "facebook" %}">Facebook</a></li>
         <li><a class="secondary button" href="{% provider_login_url "twitter" %}">Twitter</a></li>
         <li><a class="secondary button" href="{% provider_login_url "google" %}">Google</a></li>
@@ -29,41 +37,6 @@
 
   <a class="close-reveal-modal">&#215;</a>
 </div>
-<div id="signup-modal" class="reveal-modal small" data-reveal>
-  <form method="POST" action="{% url 'account_signup' %}">
-    <h3>Sign up</h3>
-    <div class="row">
-      <div class="small-7 columns">
-          {% csrf_token %}
-          <label><div>E-mail</div>         <input type="text" name="email" placeholder="example@example.org"></label>
-          <label><div>Name</div>           <input type="text" name="username"></label>
-          <label><div>Password</div>       <input type="password" name="password1"></label>
-          <label><div>Repeat password</div><input type="password" name="password2"></label>
-          <input type="hidden" name="next" value="{% url 'new_user' %}">
-      </div>
-      <div class="small-5 columns signup">
-        <label>
-          <div class="row">
-            <div class="columns small-1">
-              <input type="checkbox" name="terms">
-            </div>
-            <div class="columns small-10">
-              I agree to the Terms of Service and Privacy Policy of The Global Change Lab
-            </div>
-          </div>
-      </label>
-      </div>
-    </div>
-    <div>
-      <button>Sign up</button>
-    </div>
-
-  </form>
-
-  <a class="close-reveal-modal">&#215;</a>
-</div>
-
-
 
 <div id="front-page-greeter">
   <h2>Change the world</h2><br>
@@ -90,7 +63,7 @@
     <h1>Share with others</h1>
     <div class="icon large chat"></div>
     <p>Share what you do and learn from other activists</p>
-    <a href="{#{% url 'shares' %}#}" class="button join">See all shares</a>
+    <a href="{% url 'skills:shares_overview' %}" class="button join">See all shares</a>
   </div>
 </div>
 
