--- a/global_change_lab/templates/account/login.html
+++ b/global_change_lab/templates/account/login.html
@@ -35,13 +35,16 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {# {{ form.as_p }} #} {# TODO: Use translation instead of this manual override #}
+  {{ form.non_field_errors }}
   <p>
     <label for="id_login">Username or email:</label>
     <input id="id_login" type="text" placeholder="Username or e-mail" name="login" autofocus="autofocus"></input>
+    {{ form.login.errors }}
   </p>
   <p>
     <label for="id_password">Password:</label>
     <input id="id_password" type="password" placeholder="Password" name="password"></input>
+    {{ form.password.errors }}
   </p>
   <div class="bottom">
     {# <div class="columns medium-6"> #}
