--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{% static 'medium-editor/medium-editor.css' %}">
   <script src="{% static 'global_change_lab/js/trainingbit_view.min.js' %}"></script>
   <script src="{% static 'global_change_lab/js/trainer.min.js' %}"></script>
+  <script src="{% static 'global_change_lab/js/fileupload.min.js' %}"></script>
 {% endblock %}
 
 
@@ -94,8 +95,16 @@ Offline.on('up', function() {
     <button>Add link</button>
     <a class="close-reveal-modal">&#215;</a>
   </div>
+  <div id="modal-add-picture" class="reveal-modal" data-reveal>
+    <h2>Add picture</h2>
+    <input id="fileupload" type="file" name="picture">
+    <div class="dropzone">Drop a picture here</div>
+    <div id="picture"></div>
+    <button>Add picture</button>
+    <a class="close-reveal-modal">&#215;</a>
+  </div>
   <div id="modal-add-embed" class="reveal-modal" data-reveal>
-    <h2>Add link</h2>
+    <h2>Add embed</h2>
     <label>Embed HTML: <textarea class="html" placeholder="Write some text here..."></textarea></label>
     <button>Add embed</button>
     <a class="close-reveal-modal">&#215;</a>
@@ -113,7 +122,7 @@ Offline.on('up', function() {
   <script type="text/template" id="TbPart-editable-template">
     <div class="input-field-row">
       <div class="handle"><span class="icon arrow-combo"></span></div>
-      <div class="input-field">
+      <div class="input-field editable">
         <%= content %>
       </div>
       <div class="help-text">
@@ -144,16 +153,13 @@ Offline.on('up', function() {
     <h6>Link</h6>
     Links to external websites
   </script>
-
+  <script type="text/template" id="embed-picture-text">
+    <h6>Picture</h6>
+    Add beautiful pictures to your training bit
+  </script>
   <script type="text/template" id="embed-help-text">
     <h6>Embed</h6>
     Videos from Youtube, Vimeo etc.
-  </script>
-  <script type="text/template" id="text-template">
-      {# <div class="text-editor" contentEditable> #}
-      <div class="text-editor text-field">
-        <%= html %>
-      </div>
   </script>
   <script type="text/template" id="text-help-text">
     <h6>Text</h6>
@@ -177,6 +183,12 @@ Offline.on('up', function() {
           <a class="add-link" href="#" data-reveal-id="modal-add-link" data-reveal>
           <span class="icon medium link"></span><br>
           Add link
+          </a>
+        </li>
+        <li>
+          <a class="add-picture" href="#" data-reveal-id="modal-add-picture" data-reveal>
+          <span class="icon medium camera"></span><br>
+          Add picture
           </a>
         </li>
         <li>
@@ -276,8 +288,8 @@ var TrainingBitPartView = Backbone.View.extend({
     // There may be smarter ways to do this, rather than just listening for
     // keypresses.
     // See: http://stackoverflow.com/questions/7802784/listening-to-events-of-a-contenteditable-html-element/7804973#7804973
-    'keypress .text-editor': 'saveText',
-    'blur .text-editor': 'saveText',
+    'keypress .text-field': 'saveText',
+    'blur .text-field': 'saveText',
   },
 
   deleteTbPart: function() {
@@ -288,7 +300,7 @@ var TrainingBitPartView = Backbone.View.extend({
 
   saveText: function() {
     if (this.model.get('type') == 'text') {
-      this.model.attributes.html = this.$el.find('.text-editor').html();
+      this.model.attributes.html = this.$el.find('.text-field').html();
     }
     saveTrainingBit();
   },
@@ -320,7 +332,7 @@ var TrainingBitPartView = Backbone.View.extend({
     if (type == 'text') {
       // https://github.com/daviferreira/medium-editor
       // .find('.text-editor')
-      var text_editor = this.$el.find('.text-editor');
+      var text_editor = this.$el.find('.editable .text-field');
       console.log(text_editor)
       var editor = new MediumEditor(text_editor, {
           anchorInputPlaceholder: 'Type a link',
@@ -360,6 +372,7 @@ var EditorToolbarView = Backbone.View.extend({
     'click .add-text': 'addText',
     'click .add-link': 'addLink',
     'click .add-embed': 'addEmbed',
+    'click .add-picture': 'addPicture',
  },
   showButtons: function() {
     this.$el.find('.large-indicator').fadeOut(600);
@@ -414,7 +427,25 @@ var EditorToolbarView = Backbone.View.extend({
     });
 
     {# Unnecessary: $('#modal-add-embed').foundation('reveal', 'open'); #}
-   },
+  },
+  addPicture: function() {
+    var self = this;
+    var addPicture = function() {
+      console.log('Adding a picture...');
+      var value = $('#modal-add-picture img').attr('src');
+      console.log(value);
+      self.options.trainingbit.add(new TbPartPicture({url: value}));
+      $('#modal-add-picture').foundation('reveal', 'close');
+      $('#modal-add-picture button').off('click', addPicture);
+
+      saveTrainingBit();
+    };
+    $('#modal-add-picture button').on('click', addPicture);
+
+    $('#modal-add-picture').on('close', null, function () {
+      $(this).find('button').off('click', addPicture);;
+    });
+  },
 });
 
 
@@ -432,6 +463,7 @@ $(document).ready(function() {
       handle: '.handle'
     }
   });
+  tb_learn_view.on('sortStop', function() { saveTrainingBit(); });
   var tb_learn_toolbar = new EditorToolbarView({
     name: 'Add learning', // this variable is passed into the views property
                           // called `options` i.e. `this.options.name`
@@ -451,6 +483,7 @@ $(document).ready(function() {
       handle: '.handle'
     }
   });
+  tb_act_view.on('sortStop', function() { saveTrainingBit(); });
   var tb_act_toolbar = new EditorToolbarView({
     name: 'Add actions', // this variable is passed into the views property
                           // called `options` i.e. `this.options.name`
@@ -468,8 +501,9 @@ $(document).ready(function() {
     sortable: true,
     sortableOptions: {
       handle: '.handle'
-    }
+    },
   });
+  tb_share_view.on('sortStop', function() { saveTrainingBit(); });
   var tb_share_toolbar = new EditorToolbarView({
     name: 'Add sharing', // this variable is passed into the views property
                           // called `options` i.e. `this.options.name`
@@ -499,4 +533,71 @@ $(document).ready(function() {
 
 });
   </script>
+
+<script>
+{# // Set by django #}
+{# var csrftoken = $.cookie('csrftoken'); #}
+
+$('#fileupload').fileupload({
+  url: '{% url 'upload_picture' %}',
+  dataType: 'json',
+  // Enable image resizing, except for Android and Opera,
+  // which actually support image resizing, but fail to
+  // send Blob objects via XHR requests:
+  disableImageResize: /Android(?!.*Chrome)|Opera/
+      .test(window.navigator && navigator.userAgent),
+
+  imageMaxWidth: 200,
+  imageMaxHeight: 200,
+
+  formData: [
+      { name: "uid", value: "{{ uid }}"},
+      { name: "csrfmiddlewaretoken", value: "{{ csrf_token }}"},
+      { name: "identifier", value: "trainingbit_content"}
+  ],
+  {# maxFileSize: {{ maxfilesize }}, #}
+  sequentialUploads: true,
+  //imageCrop: true // Force cropped images
+
+  dropZone: $('.dropzone'),
+
+  add: function (e, data) {
+    $.each(data.files, function (index, file) {
+      console.log('Selected file: ' + file.name);
+    });
+    data.submit();
+    var progressbar = $('<div class="progress success round"> <span class="meter" style="width: 0%"></span> </div>');
+    $('#picture div').html('');
+    $('#picture div').append(progressbar);
+  },
+  progressall: function (e, data) {
+    var progress = parseInt(data.loaded / data.total * 100, 10);
+    $('#picture div div.progress span.meter').css( 'width', progress + '%');
+  },
+  done: function (e, data) {
+    $('#picture').html('');
+    $img = $('<img>');
+    console.log(data.result);
+    $img.attr('src', data.result[0].url);
+    $('#picture').append($img);
+
+    {# $.each(data.result.files, function (index, file) { #}
+    {#   console.log('Done uploading.'); #}
+    {#   $('header').text(file.name); #}
+    {# }); #}
+
+  }
+  {# change: function (e, data) { #}
+  {#   $.each(data.files, function (index, file) { #}
+  {#     alert('Selected file: ' + file.name); #}
+  {#   }); #}
+  {# }, #}
+
+}).prop('disabled', !$.support.fileInput)
+  .parent().addClass($.support.fileInput ? undefined : 'disabled');
+
+
+</script>
+
+
 {% endblock %}
