[Design] Use column projects on shares_overview

--- a/skills/templates/skills/shares_overview.html
+++ b/skills/templates/skills/shares_overview.html
@@ -3,15 +3,29 @@
 {% block body-classes %}shares-overview{% endblock %}
 
 {% block content %}
-<div class="columns medium-6">
-  <h1 class="white-on-red">Latest projects</h1>
+<div class="row">
+  <div class="columns medium-8">
+    <h1 class="white-on-red">Latest shares</h1>
+  </div>
+  <div class="columns medium-4">
+    <h1 class="white-on-red">Latest comments</h1>
+  </div>
+</div>
+  <div class="columns medium-4">
+    {% for project in project_list0 %}
+      {% include 'skills/partials/project_column.html' %}
+    {% endfor %}
+  </div>
+  <div class="columns medium-4">
+    {% for project in project_list1 %}
+      {% include 'skills/partials/project_column.html' %}
+    {% endfor %}
+  </div>
+{# </div> #}
 
   <!-- <hr> -->
 
-  {% include 'partials/project_list.html' %}
-</div>
-<div class="columns medium-6">
-  <h1 class="white-on-red">Latest comments</h1>
+<div class="columns medium-4">
 
   <!-- <hr> -->
 
