--- a/scss/entypo.scss
+++ b/scss/entypo.scss
@@ -12,11 +12,11 @@ font-family: 'EntypoRegular';
  
 @font-face {
 font-family: 'EntypoSocialRegular';
-src: url('font/entypo-social.eot');
-src: url('font/entypo-social.eot?#iefix') format('embedded-opentype'),
-url('font/entypo-social.woff') format('woff'),
-url('font/entypo-social.ttf') format('truetype'),
-url('font/entypo-social.svg#EntypoRegular') format('svg');
+    src: url('/static/global_change_lab/entypo-social.eot');
+    src: url('/static/global_change_lab/entypo-social.eot?#iefix') format('embedded-opentype'),
+         url('/static/global_change_lab/entypo-social.woff') format('woff'),
+         url('/static/global_change_lab/entypo-social.ttf') format('truetype'),
+         url('/static/global_change_lab/entypo-social.svg#EntypoRegular') format('svg');
 font-weight: normal;
 font-style: normal;
 }
@@ -273,7 +273,6 @@ font-style: normal;
 .icon.cc-remix:before{ content:'\1F54F'; }
 .icon.db-logo:before{ content:'\1F5F9'; }
 .icon.db-shape:before{ content:'\1F5FA'; }
- icon
 .icon-social.github:before{ content:'\F300'; }
 .icon-social.c-github:before{ content:'\F301'; }
 .icon-social.flickr:before{ content:'\F303'; }
@@ -285,8 +284,8 @@ font-style: normal;
 .icon-social.facebook:before{ content:'\F30C'; }
 .icon-social.c-facebook:before{ content:'\F30D'; }
 .icon-social.s-facebook:before{ content:'\F30E'; }
-.icon-social.google+:before{ content:'\F30F'; }
-.icon-social.c-google+:before{ content:'\F310'; }
+.icon-social.google-plus:before{ content:'\F30F'; }
+.icon-social.c-google-plus:before{ content:'\F310'; }
 .icon-social.pinterest:before{ content:'\F312'; }
 .icon-social.c-pinterest:before{ content:'\F313'; }
 .icon-social.tumblr:before{ content:'\F315'; }
