--- a/scss/base.scss
+++ b/scss/base.scss
@@ -214,6 +214,7 @@ footer {
 
     .text {
       padding-top: rem-calc(5px);
+      line-height: 1.5;
     }
     .likes-n-comments {
       ul {
@@ -234,6 +235,13 @@ footer {
         }
         margin-bottom: rem-calc(10px);
         height: 3.5rem;
+
+        .profile-picture {
+          text-align: center;
+          img {
+            height: 3.5rem;
+          }
+        }
       }
     }
   }
@@ -248,6 +256,7 @@ footer {
     width: 50%;
     margin-left: 0;
     font-size: 0.7rem;
+    line-height: 1.3;
     // font-weight: 100;
 
     div.columns {
