--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -23,7 +23,7 @@
         <span class="icon triangle-down red"></span>
       </a>
     {% endif %}
-  <ul id="skill-all-topics" class="f-dropdown" data-dropdown-content>
+  <ul id="skill-all-topics" class="f-dropdown topics" data-dropdown-content>
     {% for topic in topics %}
       {# {% if topic != topic_chosen %} #}
       <li><a href="{% url 'skills:skills_overview' topic.slug %}">{{ topic.name }}</a></li>
