[Update] Fix soft- and hard-delete AJAX operations

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -280,6 +280,12 @@ p.skill-description, p.trainingbit-description {
   font-weight: 100;
 }
 
+.delete-dropdown {
+  padding: 0.5rem;
+  font-size: 0.9rem;
+}
+
+
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
